--- a/.github/workflows/netwiz_ci.yml
+++ b/.github/workflows/netwiz_ci.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           config_file: Doxyfile
-          folder: docs
+          folder: docs/html
       #- name: Deploy to GH Pages 🚀
       #  uses: peaceiris/actions-gh-pages@v3
       #  with:
