--- a/.github/workflows/netwiz_ci.yml
+++ b/.github/workflows/netwiz_ci.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           config_file: Doxyfile
-          folder: html
+          folder: html/html
           target_folder: docs
       #- name: Deploy to GH Pages 🚀
       #  uses: peaceiris/actions-gh-pages@v3
