--- a/.github/workflows/netwiz_ci.yml
+++ b/.github/workflows/netwiz_ci.yml
@@ -20,7 +20,7 @@ jobs:
       working-directory: ./script
       run: bash ghdl_run_all.sh
   # while we wait for the official nvc githib action, we simply install nvc in the GHDL container.
-  nvc_sim:
+  nvc_simold:
     runs-on: ubuntu-latest
     steps:
     - uses: ghdl/setup-ghdl-ci@nightly
@@ -43,6 +43,22 @@ jobs:
     - name: sim
       working-directory: ./script
       run: bash nvc_run_all.sh
+  
+  nvc_sim:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: nickg/setup-nvc-ci@v1
+      with:
+        version: latest
+    - name: checkout
+      uses: actions/checkout@v3
+    - name: sim
+      working-directory: ./script
+      run: bash nvc_run_all.sh
+
+
+- run: |
+    nvc --version    # NVC binary added to path
   document:
     needs: [ghdl_sim, nvc_sim]
     runs-on: ubuntu-latest
