--- a/.github/workflows/netwiz_ci.yml
+++ b/.github/workflows/netwiz_ci.yml
@@ -9,10 +9,11 @@ on:
 
 jobs:
   ghdl_sim:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
-    - uses: ghdl/setup-ghdl-ci@nightly
+    - uses: ghdl/setup-ghdl@v1
       with:
+        version: 4.1.0
         backend: llvm
     - name: checkout
       uses: actions/checkout@v4
