--- a/.github/workflows/netwiz_ci.yml
+++ b/.github/workflows/netwiz_ci.yml
@@ -31,7 +31,9 @@ jobs:
       uses: actions/checkout@v4
     - name: sim_nvc
       working-directory: ./script
-      run: bash nvc_run_all.sh
+      run: | 
+        echo $PATH
+        bash nvc_run_all.sh
 
   document:
     needs: [ghdl_sim, nvc_sim]
