--- a/.github/workflows/netwiz_ci.yml
+++ b/.github/workflows/netwiz_ci.yml
@@ -21,7 +21,8 @@ jobs:
       working-directory: ./script
       run: |
         echo $PATH
-        ls -al /home/runner/work/netwiz/netwiz/install/bin
+        pwd
+        ls -al
         bash ghdl_run_all.sh
   
   nvc_sim:
