Drop action, install prebuilt

--- a/.github/workflows/netwiz_ci.yml
+++ b/.github/workflows/netwiz_ci.yml
@@ -9,12 +9,15 @@ on:
 
 jobs:
   ghdl_sim:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-22.04
     steps:
-    - uses: ghdl/setup-ghdl@v1
-      with:
-        version: 5.0.1
-        backend: llvm
+    - name: install_ghdl
+      run: |
+        apt-get update
+        apt-get install -y gcc clang libgnat-10 libllvm14 libc-dev zlib1g-dev 
+        apt-get install -y wget libglib2.0-0
+        wget https://github.com/ghdl/ghdl/releases/download/v4.1.0/ghdl-gha-ubuntu-22.04-llvm.tgz
+        tar zxf ghdl-gha-ubuntu-22.04-llvm.tgz -C /usr
     - name: checkout
       uses: actions/checkout@v4
     - name: sim_ghdl
